# leaner-waigaya

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  control.html  control.js  display.html  electron-builder.json  forge.config.js  main.js  package-lock.json  package.json  slack-client.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs  vite.config.ts  vite.renderer.control.config.ts  vite.renderer.display.config.ts
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: build-windows.yml  build.yml
control/: control.css  control.html  control.js  slack-client.js
display/: display.css  display.html  display.js
src/: ControlApp.tsx  DisplayApp.tsx  control-renderer.ts  display-renderer.ts  global.d.ts  index.css  main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  slack_client.rs  storage.rs
src-tauri/src/commands/: config.rs  slack.rs
src/components/: ChannelManager.tsx  DisplaySettings.tsx  DisplayWindow.tsx  EmojiManager.tsx  LogViewer.tsx  SlackConnection.tsx  UserManager.tsx
src/hooks/: useLogger.ts
src/lib/: TextQueue.ts  emoji-converter.ts  slack-client.ts  tauri-api.ts  types.ts
styles/: control.css
