[package]
name = "leaner-waigaya"
version = "1.0.0"
description = "Slack Message Display App"
authors = ["Yusuke Kokubo <yusuke.kokubo@gmail.com>"]
edition = "2021"

[lib]
name = "leaner_waigaya_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
anyhow = "1"
dirs = "6"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
